# roastmypitch

./: .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  SUPABASE_CONFIG.md  env-supabase.md  env-template.md  env.example  generate-context.sh  project-context-prompt-20250728-0423.txt  project-context-prompt-20250728-1757.txt  project-context-prompt-20250729-2158.txt  project-context-prompt-20250729-2200.txt  project-context-prompt-20250729-2214.txt  project-context-prompt-20250730-0608.txt  project-context-prompt-20250731-0537.txt  project-context-prompt-20250801-2144.txt  project-context-prompt-20250803-2002.txt  render.yaml
backend/: database_schema.sql  health_check.py  pyproject.toml  requirements.txt
backend/src/: adaptive_questioning.py  analysis_engine.py  competitor_analysis.py  ecosystem_research.py  main.py  prompts.py
frontend/: .env.local.example  .gitignore  README.md  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/auth/callback/: route.ts
frontend/app/hooks/: use-toast.ts
frontend/components/: adaptive-questions.tsx  agent-selector.tsx  chat-interface.tsx  competitor-analysis.tsx  custom-icons.tsx  ecosystem-updates.tsx  feedback-modal.tsx  header.tsx  magic-link-auth.tsx  magic-link-signin.tsx  message-input.tsx  onboarding-guide.tsx  progress-indicators.tsx  smart-suggestions.tsx  suggested-questions.tsx
frontend/lib/: auth-context.tsx  supabase-server.ts  supabase.ts  topic-analyzer.ts
frontend/types/: next-auth.d.ts
(+7 files in other folders)
