[project]
name = "starknet_founders_bot_v2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Omar Espejel", email = "espejelomar@gmail.com" },
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.6",
    "openai>=1.35.3",
    "llama-index>=0.10.50",
    "llama-index-llms-openai>=0.1.24",
    "llama-index-vector-stores-chroma>=0.1.8",
    "chromadb>=0.5.5",
    "anthropic>=0.28.0",
    "llama-index-embeddings-huggingface>=0.2.0",
    "pypdf>=4.2.0",
    "llama-index-llms-openai-like>=0.2.0",
    "requests>=2.31.0",
    "python-socketio>=5.11.0",
    "pdf2image>=1.16.0",
    "pillow>=9.0.0",
]
readme = "README.md"
requires-python = ">=3.8.1"
